--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,6 +155,7 @@ ul li {
   margin: 0px 0px;
   display: flex;
 }
+
 .content-holder {
   width: 90%;
 }
@@ -247,7 +248,7 @@ ul li {
 #comment-sect {
   width: 50%;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
   text-align: center;
 }
@@ -429,14 +430,13 @@ ul li {
   background-color: white;
   margin: 0px 0;
   padding: 1px 10px;
-  border-radius: 5px;
-  border-bottom: 4px solid rgb(149, 149, 149);
+  border-bottom: 4px solid rgb(113, 55, 223);
 }
 .comment-holder p {
   line-height: 20px;
   width: 100%;
 }
-.comment-holder i {
+.username-holder{
   font-size: medium;
   font-weight: 600;
   opacity: 0.5;
@@ -464,7 +464,23 @@ ul li {
   margin-left: 5px;
 }
 
-/* --- RESPONSIVE DESIGN ---- */
+.comment-form {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  margin: 0;
+}
+
+.comment-form textarea{
+  width: 100%;
+  height: 50px;
+}
+.comment-form button{
+  width: 10%;
+  height: 50px;
+}
+
+/* --- "RESPONSIVE" DESIGN ---- */
 
 #logo{
   height: 75px;
@@ -494,10 +510,10 @@ ul li {
   opacity: 0.5;
   margin-left: 15vw;
   width: 45%;
-  background-color: #72727E;
-  border-left: 10px solid #9893DA;
-  border-right: 10px solid #9893DA;
-  filter: drop-shadow(0 0 10px rgb(65, 65, 65));
+  border-left: 5px solid rgb(98, 31, 221);
+  border-right: 5px solid rgb(221, 107, 31);
+  background: linear-gradient(180deg, rgb(245, 245, 245) 10%, rgba(219, 219, 219, 1) 90%, rgba(170,69,252,0) 100%);
+  filter: drop-shadow(0 0 40px rgb(65, 65, 65));
 }
 
 @media only screen and (max-width: 800px) {
