--- a/views/pages/comment.hbs
+++ b/views/pages/comment.hbs
@@ -1,8 +1,7 @@
 
 {{> post data=post}}
 
-<form method="POST" action="/comment/{{post._id}}/create">
-  <label>Comment</label>
+<form class="comment-form" method="POST" action="/comment/{{post._id}}/create">
   <textarea type="text" name="sentence" placeholder="Post your comment!"></textarea>
   
   <button type='submit'>Post</button>
