--- a/views/profile/newPost.hbs
+++ b/views/profile/newPost.hbs
@@ -3,3 +3,18 @@
     <textarea type="sentence" name="sentence" placeholder="Just type somethin" ></textarea>
     <button type='submit'>Send</button>
 </form>
+<!-- 
+<form method="get" action="/profile/search-gifs">
+    <h2>Amazing Gif Search engine</h2>
+    <input name="searchTerm" type="text" placeholder="Search for some Gifs">
+    <button type="submit" class="button">Search</button>
+</form>
+
+{{#if gif}}
+    <select name="selectedGif" id="">
+            {{#each gif}}
+                <option value="{{this.gifsrc}}"></option>
+            {{/each}}  
+    </select>
+{{/if}}
+   -->
