--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,5 +1,13 @@
-
-
+<br>
+<br>
+<a href="/profile/update-user">
+    <button class="small-button col-orange">Update User</button>
+</a>
+<a href="/profile/delete-user">
+    <button class="small-button col-red">Delete User</button>
+</a>
+<br>
+<br>
 <div class="profile-header col-purple">
     <p>My posts</p>
 </div>                      
