regex pw addition

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -6,7 +6,7 @@
   <input name="email" type="email"  placeholder="Enter your email"  >  
 
   <label>Password</label>
-  <input name="password" type="password"  placeholder="Enter your Password"  >
+  <input name="password" type="password"  placeholder="Create a password"  >
   <button>Sign Up</button>
 </form>
 
