Added Error & not-found Page, Fixes Logo bug

--- a/views/auth/landingpage.hbs
+++ b/views/auth/landingpage.hbs
@@ -9,7 +9,7 @@
 
 <p>Anonymous and reliable. Mark Zuckerberg is gonna hate it.</p>
 
-<button id='redirect'>Check it out boi</button>
+<button class="small-button col-purple" id='redirect'>Check it out boi</button>
 <script>document.querySelector('#redirect')
     .addEventListener('click', () => {
         window.location.href= '/home'
