--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,7 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<img id="logo" src="../images/logo-color.png">
+<h1>Oh Boi ERROR 404</h1>
+<p>What are you doing here?</p>
+<a href="/home/hot">
+    <button id='redirect' class="small-button col-orange">Go back to a page that exists</button>
+</a>
+
