--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
       
       <nav id='nav-holder'>
          <a href="/home" id="logo-holder" class="nav-container">
-            <img id="logo" src="../images/logo-color.png">
+            <img id="logo" src="../../../../../images/logo-color.png">
          </a>
 
          <div class="nav-container">
