--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,3 +1,6 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok! Check your routes to see what might have happened
-</h2>
+<img id="logo" src="../../../../../images/logo-color.png">
+<h1>Oh Boi ERROR 404</h1>
+<p>What are you doing here?</p>
+<a href="/home/hot">
+    <button id='redirect' class="small-button col-purp-orang">Go back to a page that exists</button>
+</a>
