--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,34 +8,56 @@ body {
 }
 
 a {
-  color: #00b7ff;
+  color: #9900ff;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+a:hover {
+  color: #ff8800;
   text-decoration: none;
   font-size: 1.5em;
 }
 
 form {
-  margin: 30px auto;
+  margin: 30px 10px;
   width: 80%;
 }
 
 form label {
-  color: #666;
+  color: rgb(56, 56, 56);
   display: inline-block;
-  margin-bottom: 10px;
-  text-align: center;
+  margin-bottom: 5px;
+  text-align: left;
   width: 100%;
 }
 
 form input,
-form textarea,
-form button {
+form textarea {
   box-sizing: border-box;
   font-size: 14px;
-  outline: 0;
+  outline: 2px solid #d4d4d4;
+  border: 0;
+  border-radius: 5px;
   padding: 4px;
+  height: 25px;
   width: 100%;
   margin-bottom: 20px;
+  transition: 0.3s;
 }
+
+.log-or-sign {
+  display: flex; align-items: center; justify-content: space-around;
+}
+
+.log-or-sign * {
+  margin-left: 10px;
+}
+
+form input:focus,
+form textarea:focus {
+  outline: 2px solid #e69f43;
+}
+
 form textarea {
   height: 200px;
   resize: none;
@@ -44,8 +66,8 @@ form textarea {
 
 
 form button {
-  background: #43a3e6;
-  border: 1px solid #43a3e6;
+  background: #8143e6;
+  border: 0px;
   border-radius: 4px;
   color: #fff;
   cursor: pointer;
@@ -59,12 +81,13 @@ form button {
 }
 
 form button:hover {
-  transform: scale(1.1);
+  background: #e69f43;
+  transform: scale(1);
   transition: 0.3s ease background;
 }
 
 .error {
-  background: #f02b63;
+  background: #f02b2b;
   box-sizing: border-box;
   color: #fff;
   margin: 20px auto;
@@ -274,7 +297,7 @@ ul li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #F5F5F5;
+  background-color: #ecebeb;
   height: 80px;
   width: 100%;
   filter: drop-shadow(0 4px 10px rgb(61, 61, 61));
@@ -297,8 +320,9 @@ ul li {
 }
 
 .middle-item {
-  background-color:rgb(223, 223, 223);
+  background-color:rgb(255, 255, 255);
   border-radius: 10px;
+  border: 2px solid #972bf0;
   margin: 0 10px;
   width: 100px;
   display: flex;
@@ -308,8 +332,10 @@ ul li {
 }
 
 .middle-item:hover {
-  color: #f02b63;
-  border: 2px solid #f02b63;
+  color: #f08a2b;
+  border: 2px solid #f08a2b;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 
@@ -357,7 +383,7 @@ ul li {
   flex-direction: column;
 }
 .link-holder {
-  background-color: #00b7ff;
+  background-color: #6cbedf;
 }
 
 #sing-link {
@@ -369,7 +395,8 @@ ul li {
 }
 
 #sing-link:hover {
-  color: #e61cdb;
+  color: #a22de6;
+  transform: scale(1.1);
 }
 
 .post-container {
@@ -472,7 +499,7 @@ ul li {
   width: 100%;
   height: 50px;
   display: flex;
-  margin: 0;
+  margin-bottom: 10px;
 }
 
 .comment-form textarea{
