--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,7 +7,12 @@
 
   <label>Password</label>
   <input name="password" type="password"  placeholder="Enter your Password"  >
-  <button>Sign Up</button>
+
+  <div class="log-or-sign">
+    <button type='submit'>Signup</button>
+    <p>or</p>
+    <a href="/signup">Login</a>
+  </div>
 </form>
 
 {{#if error}}
