--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,7 +39,10 @@
             </a> 
             <a id="sing-link" class="login-disable" href="/signup">Signup</a> 
             <a id="sing-link" class="login-disable" href="/login"> Login </a> 
-            <a id="sing-link" href="/Profile"> Profile </a> 
+            <a class="middle-item profile" href="/Profile"> 
+               <img src="https://cdn-icons-png.flaticon.com/512/3745/3745272.png" alt="">
+               <p>Profile</p>
+            </a>
          </div>
       </nav>
 
