--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,7 @@
+<br>
+<br>
+<h1 style="width: 80%; text-align: center; color: rgb(141, 88, 238);">LOGIN</h1>
+
 <form method="POST" action="/login">
   <label>Username</label>
   <input type="username" name="username" placeholder="Enter your Username"  >
@@ -16,8 +20,6 @@
 
   {{#if error}}
      <div>{{error}}</div>
-
-
   {{/if}}
 
  
