--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,7 @@
+<br>
+<br>
+<h1 style="width: 80%; text-align: center; color: rgb(230, 159, 46);">SIGN UP</h1>
+
 <form action="/signup" method="POST">
   <label>Name</label>
   <input name="username" type="text"  placeholder="Create your username"  >
@@ -11,7 +15,7 @@
   <div class="log-or-sign">
     <button type='submit'>Signup</button>
     <p>or</p>
-    <a href="/signup">Login</a>
+    <a href="/login">Login</a>
   </div>
 </form>
 
