Random post button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,6 +31,11 @@
                <img src="https://cdn-icons-png.flaticon.com/512/3282/3282468.png" alt="">
                <p>New</p>
             </a>
+
+            <a class="middle-item" href="/post/random"> 
+               <img src="https://cdn-icons.flaticon.com/png/512/1626/premium/1626822.png?token=exp=1637853156~hmac=d78b9bd52ff85164ed6de90ee0cd90cc" alt="">
+               <p>Random</p>
+            </a>
          </div>
 
          <div class="nav-container">
