locally added images

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,22 +18,22 @@
 
          <div class="nav-container">
             <a class="middle-item" href="/home/hot"> 
-               <img src="https://cdn-icons-png.flaticon.com/512/633/633652.png" alt="">
+               <img src="../../../../images/coffee.png" alt="">
                <p>Hot</p>
             </a>
 
             <a class="middle-item" href="/home/trendy"> 
-               <img src="https://cdn-icons-png.flaticon.com/512/3121/3121784.png" alt="">
+               <img src="../../../../images/chart.png" alt="">
                <p>Trendy</p>
             </a>
 
             <a class="middle-item" href="/home/new"> 
-               <img src="https://cdn-icons-png.flaticon.com/512/3282/3282468.png" alt="">
+               <img src="../../../../images/baby.png" alt="">
                <p>New</p>
             </a>
 
             <a class="middle-item" href="/post/random"> 
-               <img src="https://cdn-icons.flaticon.com/png/512/1626/premium/1626822.png?token=exp=1637853156~hmac=d78b9bd52ff85164ed6de90ee0cd90cc" alt="">
+               <img src="../../../../images/dice.png" alt="">
                <p>Random</p>
             </a>
          </div>
@@ -45,7 +45,7 @@
             <a id="sing-link" class="login-disable" href="/signup">Signup</a> 
             <a id="sing-link" class="login-disable" href="/login"> Login </a> 
             <a class="middle-item profile" href="/Profile"> 
-               <img src="https://cdn-icons-png.flaticon.com/512/3745/3745272.png" alt="">
+               <img src="../../../../images/profile.png" alt="">
                <p>Profile</p>
             </a>
          </div>
