--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -15,10 +15,10 @@
             <div class="user-objectID" id="{{data.userid}}"></div>
             {{#if data.upvote}}
                 <img id="votes-uparrow" class="vote-arrow img-upvote"
-                src="https://cdn-icons-png.flaticon.com/512/892/892683.png">
+                src="../../../../images/upvote.png">
                 {{else}}
                 <img id="votes-uparrow" class="vote-arrow"
-                src="https://cdn-icons-png.flaticon.com/512/892/892683.png">
+                src="../../../../images/upvote.png">
             {{/if}}
 
             <p id="votes-amount"> 
@@ -27,17 +27,17 @@
 
             {{#if data.downvote}}
                 <img id="votes-downarrow" class="vote-arrow img-downvote"
-                src="https://cdn-icons-png.flaticon.com/512/892/892625.png">
+                src="../../../../images/downvote.png">
                 {{else}}
                 <img id="votes-downarrow" class="vote-arrow"
-                src="https://cdn-icons-png.flaticon.com/512/892/892625.png">
+                src="../../../../images/downvote.png">
             {{/if}}
         </div>
     </div>
     <div class="line-break"></div>
     <div class="bottom-holder">
         <div id="time-ago">
-            <img src="https://cdn2.iconfinder.com/data/icons/pittogrammi/142/10-512.png" alt="">
+            <img src="../../../../images/clock.png" alt="">
             <p> 
                 {{data.timeAgo}} 
             </p>
